Archive2/df/5e1ee5ed5a3a14/output
main.cpp: In function 'int main()':
main.cpp:9:7: error: invalid conversion from 'const int*' to 'int*' [-fpermissive]
     a = &c;
       ^
main.cpp:11:49: warning: format '%p' expects argument of type 'void*', but argument 2 has type 'int*' [-Wformat=]
     printf("a:  %p\n&b: %p\n&c: %p\n", a, &b, &c);
                                                 ^
main.cpp:11:49: warning: format '%p' expects argument of type 'void*', but argument 3 has type 'int*' [-Wformat=]
main.cpp:11:49: warning: format '%p' expects argument of type 'void*', but argument 4 has type 'const int*' [-Wformat=]
